@@ -1,37 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent" android:layout_height="fill_parent"
+<LinearLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent"
 	android:minHeight="?android:attr/listPreferredItemHeight"
-	android:paddingLeft="6dip" android:paddingRight="6dip"
-	android:orientation="vertical" android:gravity="center_vertical"
+	android:paddingLeft="6dip"
+	android:paddingRight="6dip"
+	android:orientation="vertical"
+	android:gravity="center_vertical"
 	android:background="@android:drawable/menuitem_background">
-	<LinearLayout android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:orientation="horizontal">
-		<TextView android:id="@+id/track" android:layout_width="wrap_content"
-			android:layout_height="fill_parent" android:ellipsize="end"
-			android:maxLines="1" android:textStyle="bold"
+	<LinearLayout
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:orientation="horizontal">
+		<TextView
+			android:id="@+id/track"
+			android:layout_width="wrap_content"
+			android:layout_height="fill_parent"
+			android:ellipsize="end"
+			android:maxLines="1"
+			android:textStyle="bold"
 			android:textAppearance="?android:attr/textAppearanceSmall"
 			android:textColor="?android:attr/textColorPrimary"
-			android:layout_weight="1" android:layout_gravity="left" />
-		<TextView android:id="@+id/when" android:layout_width="wrap_content"
-			android:layout_height="fill_parent" android:maxLines="1"
+			android:layout_weight="1"
+			android:layout_gravity="left" />
+		<TextView
+			android:id="@+id/when"
+			android:layout_width="wrap_content"
+			android:layout_height="fill_parent"
+			android:maxLines="1"
 			android:textAppearance="?android:attr/textAppearanceSmall"
 			android:textColor="?android:attr/textColorPrimary"
-			android:layout_weight="0" android:layout_gravity="right"
+			android:layout_weight="0"
+			android:layout_gravity="right"
 			android:layout_marginLeft="4dip" />
 	</LinearLayout>
-	<LinearLayout android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:orientation="horizontal">
-		<TextView android:id="@+id/artist" android:layout_width="wrap_content"
-			android:layout_height="fill_parent" android:ellipsize="end"
-			android:maxLines="1" android:textAppearance="?android:attr/textAppearanceSmall"
+	<LinearLayout
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:orientation="horizontal">
+		<TextView
+			android:id="@+id/artist"
+			android:layout_width="wrap_content"
+			android:layout_height="fill_parent"
+			android:ellipsize="end"
+			android:maxLines="1"
+			android:textAppearance="?android:attr/textAppearanceSmall"
 			android:textColor="?android:attr/textColorSecondary"
-			android:layout_weight="1" android:layout_gravity="left" />
-		<TextView android:id="@+id/album" android:layout_width="wrap_content"
-			android:layout_height="fill_parent" android:ellipsize="end"
-			android:maxLines="1" android:textAppearance="?android:attr/textAppearanceSmall"
+			android:layout_weight="1"
+			android:layout_gravity="left" />
+		<TextView
+			android:id="@+id/album"
+			android:layout_width="wrap_content"
+			android:layout_height="fill_parent"
+			android:ellipsize="end"
+			android:maxLines="1"
+			android:textAppearance="?android:attr/textAppearanceSmall"
 			android:textColor="?android:attr/textColorSecondary"
-			android:layout_weight="0" android:layout_gravity="right"
+			android:layout_weight="0"
+			android:layout_gravity="right"
 			android:layout_marginLeft="4dip" />
 	</LinearLayout>
 </LinearLayout>
